--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -32,7 +32,6 @@ linters:
     - goprintffuncname
     - nolintlint
     - dupl
-    - gochecknoinits
 
  # don't enable:
  #  - golint        # deprecated
@@ -41,6 +40,7 @@ linters:
  #  - exhaustive
  #  - gomnd
  #  - gofmt
+ #  - gochecknoinits
 
 run:
   deadline: 3m
@@ -53,9 +53,3 @@ issues:
     - path: _test\.go
       linters:
         - dupl
-    - path: main.go
-      linters:
-        - gochecknoinits
-    - path: gslb_types.go
-      linters:
-        - gochecknoinits
