--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -30,7 +30,6 @@ linters:
     - exportloopref
     - goconst
     - goprintffuncname
-    - nolintlint
     - dupl
 
  # don't enable:
@@ -41,6 +40,7 @@ linters:
  #  - gomnd
  #  - gofmt
  #  - gochecknoinits
+ #  - nolintlint
 
 run:
   deadline: 3m
