--- a/action.yaml
+++ b/action.yaml
@@ -34,8 +34,8 @@ runs:
         go run main.go cancel
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
-        GITHUB_REPOSITORY: ${{ process.env.GITHUB_REPOSITORY }}
-        GITHUB_RUN_ID: ${{ process.env.GITHUB_RUN_ID }}
+        GITHUB_REPOSITORY: ${{ env.GITHUB_REPOSITORY }}
+        GITHUB_RUN_ID: ${{ env.GITHUB_RUN_ID }}
         CANCEL_WHEN_JOB_SUCCESSFULLY_PASSED: ${{ inputs.cancel-when-job-sucessfully-passed }}
         REMOVE_ARTIFACT: ${{ inputs.remove-artifact }}
         VERBOSE: ${{ inputs.verbose }}
