--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
        # see: https://golangci-lint.run/usage/configuration/#config-file
+
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "1.17.6"
+
       - name: cancel-action
         uses: ./
         with:
