--- a/action.yaml
+++ b/action.yaml
@@ -26,6 +26,11 @@ inputs:
 runs:
   using: composite
   steps:
+   # TODO: consider to put it into composite action
+    - uses: actions/setup-go@v2
+      with:
+        go-version: "1.17.6"
+
     - id: main
       shell: bash
       run: |
