--- a/action.yaml
+++ b/action.yaml
@@ -34,7 +34,11 @@ runs:
     - id: prepare-development
       shell: bash
       if: ${{ github.ref == 'refs/heads/master' }}
-      run: echo "DEVELOPMENT RUN"
+      run: |
+        echo "DEVELOPMENT RUN"
+        cd ${{ github.action_path }}
+        go mod tidy
+        go build main.go
 
     - id: prepare-release
       shell: bash
@@ -44,9 +48,7 @@ runs:
     - id: main
       shell: bash
       run: |
-        cd ${{ github.action_path }}
-        go mod tidy
-        go run main.go cancel
+        ./main cancel
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
         GITHUB_REPOSITORY: ${{ env.GITHUB_REPOSITORY }}
