--- a/action.yaml
+++ b/action.yaml
@@ -48,7 +48,8 @@ runs:
         VERSION=${{ inputs.generator_version }}
         curl -L https://github.com/${{env.GITHUB_REPOSITORY_OWNER}}/${{env.GITHUB_REPOSITORY}}/releases/download/v${VERSION}/${{env.GITHUB_REPOSITORY}}_${VERSION}_linux_amd64.zip -o release.zip
         ls -la
-        unzip release.zip
+        unzip ./release.zip
+        ls -la
 
     - id: main
       shell: bash
