--- a/action.yaml
+++ b/action.yaml
@@ -46,7 +46,7 @@ runs:
       run: |
         echo "RELEASE RUN"
         VERSION=${{ inputs.generator_version }}
-        curl -L https://github.com/${{env.GITHUB_REPOSITORY_OWNER}}/${{env.GITHUB_REPOSITORY}}/releases/download/v${VERSION}/${{env.GITHUB_REPOSITORY}}_${VERSION}_linux_amd64.zip -o release.zip
+        curl -L https://github.com/${{GITHUB_REPOSITORY_OWNER}}/${{GITHUB_REPOSITORY}}/releases/download/v${VERSION}/${{GITHUB_REPOSITORY}}_${VERSION}_linux_amd64.zip -o release.zip
         ls -la
         unzip ./release.zip
         ls -la
@@ -56,7 +56,7 @@ runs:
       run: |
         ./main cancel
       env:
-        GITHUB_REPOSITORY_OWNER: ${{env.GITHUB_REPOSITORY_OWNER}}
+        GITHUB_REPOSITORY_OWNER: ${{GITHUB_REPOSITORY_OWNER}}
         GITHUB_TOKEN: ${{ inputs.token }}
         GITHUB_REPOSITORY: ${{ env.GITHUB_REPOSITORY }}
         GITHUB_RUN_ID: ${{ env.GITHUB_RUN_ID }}
