--- a/action.yaml
+++ b/action.yaml
@@ -35,7 +35,9 @@ runs:
       shell: bash
       if: ${{ github.ref == 'refs/heads/master' }}
       run: |
+        echo https://github.com/$GITHUB_REPOSITORY/releases/download/$GITHUB_REF/cancel-action_$GITHUB_REF_linux_amd64.zip
         curl -L https://github.com/${GITHUB_REPOSITORY}/releases/download/${GITHUB_REF}/cancel-action_${GITHUB_REF}_linux_amd64.zip -o release.zip
+        unzip release.zip
         echo "DEVELOPMENT RUN" $GITHUB_REPOSITORY
         cd ${{ github.action_path }}
         go mod tidy
