--- a/action.yaml
+++ b/action.yaml
@@ -26,7 +26,6 @@ inputs:
 runs:
   using: composite
   steps:
-   # TODO: consider to put it into composite action
     - uses: actions/setup-go@v2
       with:
         go-version: "1.17.6"
@@ -38,21 +37,21 @@ runs:
         echo "DEVELOPMENT RUN" $GITHUB_REPOSITORY
         cd ${{ github.action_path }}
         go mod tidy
-        go build main.go
+        go build -o cancel-action main.go
 
     - id: prepare-production-run
       shell: bash
       if: ${{ github.ref != 'refs/heads/master' }}
       run: |
         echo "RELEASE RUN"
-        echo https://github.com/${GITHUB_REPOSITORY}/releases/download/${GITHUB_REF_NAME}/cancel-action_${GITHUB_REF_NAME}_linux_amd64.tar.gz -o release.zip
-        curl -L https://github.com/${GITHUB_REPOSITORY}/releases/download/${GITHUB_REF_NAME}/cancel-action_${GITHUB_REF_NAME}_linux_amd64.tar.gz -o release.zip
-        unzip ./release.zip
+        echo https://github.com/${GITHUB_REPOSITORY}/releases/download/${GITHUB_REF_NAME}/cancel-action_${GITHUB_REF_NAME}_linux_amd64.tar.gz
+        curl -L https://github.com/${GITHUB_REPOSITORY}/releases/download/${GITHUB_REF_NAME}/cancel-action_${GITHUB_REF_NAME}_linux_amd64.tar.gz -o release.tar.gz
+        tar -xvf ./release.tar.gz
 
     - id: main
       shell: bash
       run: |
-        ./main cancel
+        ./cancel-action cancel
       env:
         # GITHUB_REPOSITORY, GITHUB_REPOSITORY_OWNER are already set. Don't need to be passed
         GITHUB_TOKEN: ${{ inputs.token }}
