--- a/action.yaml
+++ b/action.yaml
@@ -29,7 +29,9 @@ runs:
     - name: Get action tag
       shell: bash
       id: get_action_tag
-      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      run: |
+
+        echo ::set-output name=VERSION::$(basename ${{ github.action_path }})
 
     - name: Setup proper GO version
       uses: actions/setup-go@v2
@@ -41,7 +43,7 @@ runs:
       shell: bash
       if: ${{ startsWith(steps.get_action_tag.outputs.VERSION, 'refs/heads/') }}
       run: |
-        echo "DEVELOPMENT RUN" $GITHUB_REPOSITORY ${{ steps.get_action_tag.outputs.VERSION }}
+        echo "BUILD ACTION" $GITHUB_REPOSITORY ${{ steps.get_action_tag.outputs.VERSION }}
         cd ${{ github.action_path }}
         go mod tidy
         go build -o cancel-action main.go
@@ -51,7 +53,7 @@ runs:
       shell: bash
       if: ${{ !startsWith(steps.get_action_tag.outputs.VERSION, 'refs/heads/') }}
       run: |
-        echo "RELEASE RUN" ${{ steps.get_action_tag.outputs.VERSION }}
+        echo "DOWNLOAD ACTION" ${{ steps.get_action_tag.outputs.VERSION }}
         curl -L https://github.com/${GITHUB_REPOSITORY}/releases/download/${{ steps.get_action_tag.outputs.VERSION }}/cancel-action_${{ steps.get_action_tag.outputs.VERSION }}_linux_amd64.tar.gz -o release.tar.gz
         tar -xvf ./release.tar.gz
 
