--- a/action.yaml
+++ b/action.yaml
@@ -25,8 +25,6 @@ inputs:
 
 runs:
   using: composite
-  env:
-    CYAN: \033[1;36m
   steps:
     - name: Get action tag
       shell: bash
@@ -45,7 +43,7 @@ runs:
       shell: bash
       if: ${{ startsWith(steps.get_action_tag.outputs.VERSION, '.') }}
       run: |
-        echo -e ${CYAN}"BUILD ACTION"
+        echo -e "\033[1;36m BUILD ACTION"
         cd ${{ github.action_path }}
         go mod tidy
         go build -o cancel-action main.go
@@ -55,7 +53,7 @@ runs:
       shell: bash
       if: ${{ !startsWith(steps.get_action_tag.outputs.VERSION, '.') }}
       run: |
-        echo -e ${CYAN}"DOWNLOAD ACTION"
+        echo -e "\033[1;36m DOWNLOAD ACTION"
         curl -L https://github.com/${GITHUB_REPOSITORY}/releases/download/${{ steps.get_action_tag.outputs.VERSION }}/cancel-action_${{ steps.get_action_tag.outputs.VERSION }}_linux_amd64.tar.gz -o release.tar.gz
         tar -xvf ./release.tar.gz
 
